1.2.3i7:
    Checks & Agents:
    * 0060: cisco_fantray: new check for monitoring fan trays of Cisco Nexus switches...
    * 0061: cisco_cpu: check now recognizes new object cpmCPUTotal5minRev...

    Multisite:
    * 0001: New filters for selecting several host/service-groups at once...
    * 0050: New concept of favorite hosts and services plus matching filters and views...
    * 0043 FIX: LDAP: Improved error reporting during synchronisation...
    * 0044 FIX: LDAP: Fixed error with empty groups during non nested group sync...
    * 0045 FIX: LDAP: Fixed error when synchronizing non nested groups to roles...

    WATO:
    * 0053: New rule for configuring the display_name of a service...

    Reporting & Availability:
    * 0051: Option for showing timeline directly in availability table...
    * 0052: Visual colorization of availability according to levels...
    * 0054: New labelling options for availability table...

    Livestatus:
    * 0023 FIX: table statehist: code cleanup / minor performance improvements...


1.2.3i6:
    Core & Setup:
    * 0041 FIX: setup.py now handles non existing wwwuser gracefully...

    Checks & Agents:
    * 0040: Add agent plugin to test local hostname resolving...
    * 0020 FIX: Inventory problem with inventory_processes parameter...

    Multisite:
    * 0000: Improved performance of LDAP sync by refactoring the group sync code

    WATO:
    * 0042 FIX: Removed debug outputs from service inventory...


1.2.3i5:
    Core:
    * Automatically remove duplicate checks when monitoring with Agent+SNMP
       at the same time. TCP based ones have precedence.
    * inventory check of SNMP devices now does scan per default (configurable)
    * FIX: inventory check now honors settings for exit code
    * FIX: avoid exception nodes of cluster have different agent type
    * FIX: continue inventory, if one check does not support it
    * FIX: fix configuration of explicit SNMP community, allow unicode