@@ -16,16 +16,15 @@ examples:
  checkgroup_parameters.setdefault('cisco_wlc', [])
 
  checkgroup_parameters['cisco_wlc'] = [
-   ( {'ap_name': [('HOMEOFFICE', 0), ('FALLBACK', 2)], 'ap_model': [('K7-B30329', 3)]}, [], ALL_HOSTS, ALL_SERVICES ),
+   ( {'ap_name': [('HOMEOFFICE', 0), ('FALLBACK', 2)]}, [], ALL_HOSTS, ALL_SERVICES ),
  ] + checkgroup_parameters['cisco_wlc']
 
 
 [parameters]
-parameters(dict): with the keys "ap_model" and "ap_name"
+parameters(dict): with the key "ap_name"
 
- The values in this dict are lists of tuples. Each tuple contains
- either (ap_name(string), action(int)) or (ap_model(string), action(int)),
- where the ap_name is the human readable name of the AP and the ap_model is the model number.
- The action represents the outcome when this model is missing and can be
- from 0 to 3 (OK, WARN, CRIT, UNKNOWN)
+ The values in this dict are lists of tuples. Each tuple contains (ap_name(string), action(int))
+ where the ap_name is the human readable name of the AP.
+ The action represents the outcome when this name missing and
+ ranges from 0 to 3 (OK, WARN, CRIT, UNKNOWN)
 
