@@ -2,6 +2,7 @@
     Checks & Agents:
     * 0060: cisco_fantray: new check for monitoring fan trays of Cisco Nexus switches...
     * 0061: cisco_cpu: check now recognizes new object cpmCPUTotal5minRev...
+    * 0024 FIX: cisco_wlc: removed configuration parameter ap_model...
 
     Multisite:
     * 0001: New filters for selecting several host/service-groups at once...
